test/classes/initializers/phase2/modifyParentConst.good
modifyParentConst.chpl:12: In initializer:
modifyParentConst.chpl:15: error: cannot update a const field, "x", from parent type outside of this.init() or super.init()
